--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Lint code with flake8
       run: |
         source venv/bin/activate
-        flake8 .
+        flake8 . --exclude=venv,__pycache__
         
     # 5️⃣ Run tests
     - name: Run tests with pytest
