--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Lint code with flake8
       run: |
         source venv/bin/activate
-        flake8 . --exclude=venv,__pycache__
+        flake8 . --exclude=venv,__pycache__,.pytest_cache
         
     # 5️⃣ Run tests
     - name: Run tests with pytest
