--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         python-version: [3.12, 3.13]  # test multiple Python versions
 
     steps:
-    # 1️⃣ Checkout repo
+    # 1️⃣ Checkout repository
     - name: Checkout repository
       uses: actions/checkout@v4
 
@@ -27,29 +27,29 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    # 3️⃣ Create and activate venv, install dependencies
+    # 3️⃣ Create virtual environment & install dependencies
     - name: Install dependencies
       run: |
         python -m venv venv
         source venv/bin/activate
         pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pillow flake8
+        pip install black flake8 pytest pillow
 
-    # 3️⃣ Black-line formatter
+    # 4️⃣ Check code style with Black
     - name: Check code style with Black
       run: |
-        pip install black
+        source venv/bin/activate
         black --check .
 
-    # 4️⃣ Run linter
-    - name: Lint code with flake8
+    # 5️⃣ Lint code with Flake8
+    - name: Lint code with Flake8
       run: |
         source venv/bin/activate
         flake8 . --exclude=venv,__pycache__,.pytest_cache
-        
-    # 5️⃣ Run tests
-    - name: Run tests with pytest
+
+    # 6️⃣ Run tests with Pytest
+    - name: Run tests with Pytest
       run: |
         source venv/bin/activate
         pytest -v
