--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Check code style with Black
       run: |
         source venv/bin/activate
-        black .
+        black --check .
 
     # 5️⃣ Lint code with Flake8
     - name: Lint code with Flake8
